# gam150test

./: .clang-format  .gitignore  CMakeLists.txt  main.cc  main.cpp  mat3.cpp  mat3.h  node.cpp  node.h  number.h  root_node.cpp  root_node.hpp  scene_tree.cpp  scene_tree.hpp  vec2.cpp  vec2.h
assets/: gaming.aseprite  test.aseprite  wate.aseprite
assets/shaders/: sprite.frag  sprite.vert
core/: Engine.cpp  Engine.hpp  Node.cpp  Node.hpp  NodePath.cpp  NodePath.hpp  RootNode.cpp  RootNode.hpp  SceneTree.cpp  SceneTree.hpp  StringName.cpp  StringName.hpp  event.cpp  event.hpp  node_path.cpp  node_path.hpp  string_name.cpp  string_name.hpp
core/resource/: IManagedResource.cpp  IManagedResource.hpp  texture.cpp  texture.hpp
local/: iso_test.cpp  iso_test.hpp  sdl_test.cpp  sdl_test.hpp
math/: color.cpp  color.hpp  mat3.cpp  mat3.hpp  mat4.cpp  mat4.hpp  number.hpp  vec2.cpp  vec2.hp  vec2.hpp  vec2i.cpp  vec2i.hpp  vec3.cpp  vec3.hpp
nodes/: CanvasItem.cpp  CanvasItem.hpp  Node2D.cpp  Node2D.hpp  sprite_node.cpp  sprite_node.hpp
renderer/: shader.cpp  shader.hpp
